<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout android:id="@+id/root_layout" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

        <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin" android:text="@string/action_sign_in_short"
            android:textStyle="bold" />

        <TextView android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/txt_forgot_password"/>

        <Button android:id="@+id/fb_sign_in_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin" android:text="@string/login_with_fb"
            android:textStyle="bold" />

        <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin" android:text="@string/action_register_email"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

